src/objects/Purchase_order_setting__c.object
<CustomObject>
    <fields>
        <fullName>PO_Autoprefix__c</fullName>
        <inlineHelpText>This prefix will be use when registration &quot;wild&quot; Invoice</inlineHelpText>
        <label>PO prefix auto</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_External__c</fullName>
        <inlineHelpText>Will be use for third party  purchase order integration</inlineHelpText>
        <label>PO prefix ext</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Lastnumber__c</fullName>
        <label>Last used number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Prefix__c</fullName>
        <inlineHelpText>Prefix for purchase order  when you create in Musqot</inlineHelpText>
        <label>PO Prefix</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Startnumber__c</fullName>
        <label>Start number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase order setting</label>
    <nameField>
        <label>Purchase order setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase order settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>